--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,44 @@
-inherit_from: .rubocop_todo.yml
+AllCops:
+  Include:
+    - Rakefile
+    - config.ru
+    - lib/**/*.rake
+  Exclude:
+    - db/schema.rb
+    - 'Gemfile'
+    - 'bin/setup'
+    - 'bin/spring'
+
+# for some rails default files, e.g application.rb
+Metrics/LineLength:
+  Max: 112
+
+Metrics/BlockLength:
+  Max: 42
+
+Documentation:
+  Enabled: false
+
+Style/SymbolArray:
+  EnforcedStyle: brackets
+
+Style/BlockDelimiters:
+  EnforcedStyle: braces_for_chaining
+
+Style/BlockComments:
+  Exclude:
+    - 'spec/spec_helper.rb'
+
+Style/StringLiterals:
+  Exclude:
+    - 'bin/rspec'
+    - 'config/application.rb'
+    - 'spec/rails_helper.rb'    
+
+Style/EmptyLineAfterMagicComment:
+  Exclude:
+    - 'bin/rspec'
+
+Style/AlignParameters:
+  Exclude:
+    - 'bin/rspec'
