Switch to pg and modify database and env config

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Environment credentials
+.env
+.env.production
+.env.staging
